--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <body>
   <main>
-
+    <div class="error server-connection hidden">Произошла ошибка при загрузке данных с сервера!</div>
     <!-- Фильтрация изображений от других пользователей -->
     <section class="img-filters  img-filters--inactive  container">
       <h2 class="img-filters__title  visually-hidden">Фильтр фотографий</h2>
@@ -119,7 +119,7 @@
                     <input class="text__hashtags" name="hashtags" placeholder="#ХэшТег">
                   </div>
                   <div class="img-upload__field-wrapper">
-                    <textarea class="text__description" name="description" placeholder="Ваш комментарий..." required></textarea>
+                    <textarea class="text__description" name="description" placeholder="Ваш комментарий..." minlength="20" maxlength="140" required></textarea>
                   </div>
                 </fieldset>
 
